# Programming-Tests

./: .gitignore  README.md  index.md
.g8-templates/leetcode.g8/: README.markdown  build.sbt
.maven-archetype/leetcode-archetype/: pom.xml
.maven-archetype/lintcode-archetype/: pom.xml
.script/: buildIndex.py
Array/NewYearChaos/: Solution.java  makefile
Array/[Leetcode] 456. 132 Pattern/: notes.md
Array/[Leetcode] 498. Diagonal Traverse/: notes.md
Array/[Leetcode] 503. Next Greater Element II/: notes.md
Array/[Leetcode] 525. Contiguous Array/: notes.md
Array/[Leetcode] 529. Minesweeper/: notes.md
Array/[Leetcode] 533. Lonely Pixel II/: notes.md
Array/[Leetcode] 573. Squirrel Simulation/: notes.md
Array/[Leetcode] 611. Valid Triangle Number/: notes.md
BackTracking/[Leetcode] 10. Regular Expression Matching/: testcases.json
BackTracking/[Leetcode] 351. Android Unlock Patterns/: notes.md
BackTracking/[Leetcode] 490. The Maze/: notes.md
BackTracking/[Leetcode] 52. N-Queens II/: notes.md
BigInteger/: solution.cpp
BitManipulation/AND Product/: Solution.java
BitManipulation/XorSequence/: Solution.java
DataStructure/LinkedListCycle II/: Solution.java
DataStructure/QueueUsingStack/: MyQueue.java
DataStructure/SimulateStackWithQueue/: MyStack.java
DataStructure/Trie_PrefixTree/: Trie.java
Design/[Leetcode] 582. Kill Process/: notes.md
Design/[Leetcode] 588. Design In-Memory File System/: notes.md
Design/[Lintcode] 208. Assignment Operator Overloading (C++ Only) /test208/: CMakeLists.txt
Design/[Lintcode] 208. Assignment Operator Overloading (C++ Only) /test208/include/: Solution.hpp
Design/[Lintcode] 208. Assignment Operator Overloading (C++ Only) /test208/test-src/: CMakeLists.txt  SolutionTest.cpp
DivideAndConquer/[Leetcode] 282. Expression Add Operators/: notes.md
DivideAndConquer/[Leetcode] 587. Erect the Fence/: notes.md
DynamicProgramming/[Leetcode] 140. Word Break II/: notes.md
DynamicProgramming/[Leetcode] 188. Best Time to Buy and Sell Stock IV/: notes.md
DynamicProgramming/[Leetcode] 354. Russian Doll Envelopes/: notes.md
Heap/Heap Implementation/: pom.xml
Permutation/[Leetcode] 31. Next Permutation/c++/: CMakeLists.txt
Permutation/[Leetcode] 31. Next Permutation/c++/include/: Solution.hpp
Permutation/[Leetcode] 31. Next Permutation/c++/test-src/: CMakeLists.txt  SolutionTest.cpp
(+1264 files in other folders)
